style.css
/* ... */
@media (max-width: 400px) {
  html {
    font-size: 30%;
  }

  .recent-works-title {
    margin: 0 0 4rem 0;
  }

  .skill {
    padding: 1.5rem;
  }

  .main-work-text-box {
    align-items: center;
  }

  .main-work-image {
    height: 20vh;
  }

  .main-work-text-title {
    margin-top: 0;
    font-size: 3rem;
  }

  .main-work-text-area {
    font-size: 2rem;
  }

  .see-project-button {
    font-size: 2rem;
    display: flex;
    justify-content: center;
  }

  .recent-works-col-title {
    font-size: 4rem;
  }

  .recent-works-col-text {
    display: none;
  }

  .about-section-text-box {
    height: 70vh;
    padding: 0 2rem;
  }

  .about-me-section-box {
    margin: 0;
  }

  .hr-about-me {
    margin: 2rem 5rem 5rem 5rem;
  }
}

@media (max-width: 1200px) {
  html {
    font-size: 50%;
  }

  .line-1,
  .line-2,
  .line-3,
  .line-5,
  .vector14,
  .vector18,
  .vector19,
  .vector21,
  .vector21-1,
  .vector21-2,
  .vector21-3,
  .vector21-4,
  .vector21-5 {
    display: none;
  }

  .recent-works-row {
    grid-template-columns: repeat(2, 50%);
    grid-template-rows: repeat(3, 1fr);
    grid-gap: 3rem;
    margin: 5rem 0;
  }

  .recent-works-col-3 {
    grid-row: 2 / 3;
    grid-column: 1 / 2;
  }

  .recent-works-col-4 {
    grid-row: 2 / 3;
    grid-column: 2 / 3;
  }

  .recent-works-col-5 {
    grid-row: 3 / 4;
    grid-column: 1 / 2;
  }

  .recent-works-col-6 {
    grid-row: 3 / 4;
    grid-column: 2 / 3;
  }
}

